; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dcn10/extr_dcn10_dpp_cm.c_dpp1_cm_program_regamma_lut.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dcn10/extr_dcn10_dpp_cm.c_dpp1_cm_program_regamma_lut.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dpp = type { i32 }
%struct.pwl_result_data = type { i32, i32, i32, i32, i32, i32 }
%struct.dcn10_dpp = type { i32 }

@CM_RGAM_LUT_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dpp1_cm_program_regamma_lut(%struct.dpp* %0, %struct.pwl_result_data* %1, i64 %2) #0 {
  %4 = alloca %struct.dpp*, align 8
  %5 = alloca %struct.pwl_result_data*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.dcn10_dpp*, align 8
  store %struct.dpp* %0, %struct.dpp** %4, align 8
  store %struct.pwl_result_data* %1, %struct.pwl_result_data** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load %struct.dpp*, %struct.dpp** %4, align 8
  %10 = call %struct.dcn10_dpp* @TO_DCN10_DPP(%struct.dpp* %9)
  store %struct.dcn10_dpp* %10, %struct.dcn10_dpp** %8, align 8
  store i64 0, i64* %7, align 8
  br label %11

11:                                               ; preds = %64, %3
  %12 = load i64, i64* %7, align 8
  %13 = load i64, i64* %6, align 8
  %14 = icmp ult i64 %12, %13
  br i1 %14, label %15, label %67

15:                                               ; preds = %11
  %16 = load i32, i32* @CM_RGAM_LUT_DATA, align 4
  %17 = load i32, i32* @CM_RGAM_LUT_DATA, align 4
  %18 = load %struct.pwl_result_data*, %struct.pwl_result_data** %5, align 8
  %19 = load i64, i64* %7, align 8
  %20 = getelementptr inbounds %struct.pwl_result_data, %struct.pwl_result_data* %18, i64 %19
  %21 = getelementptr inbounds %struct.pwl_result_data, %struct.pwl_result_data* %20, i32 0, i32 5
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @REG_SET(i32 %16, i32 0, i32 %17, i32 %22)
  %24 = load i32, i32* @CM_RGAM_LUT_DATA, align 4
  %25 = load i32, i32* @CM_RGAM_LUT_DATA, align 4
  %26 = load %struct.pwl_result_data*, %struct.pwl_result_data** %5, align 8
  %27 = load i64, i64* %7, align 8
  %28 = getelementptr inbounds %struct.pwl_result_data, %struct.pwl_result_data* %26, i64 %27
  %29 = getelementptr inbounds %struct.pwl_result_data, %struct.pwl_result_data* %28, i32 0, i32 4
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @REG_SET(i32 %24, i32 0, i32 %25, i32 %30)
  %32 = load i32, i32* @CM_RGAM_LUT_DATA, align 4
  %33 = load i32, i32* @CM_RGAM_LUT_DATA, align 4
  %34 = load %struct.pwl_result_data*, %struct.pwl_result_data** %5, align 8
  %35 = load i64, i64* %7, align 8
  %36 = getelementptr inbounds %struct.pwl_result_data, %struct.pwl_result_data* %34, i64 %35
  %37 = getelementptr inbounds %struct.pwl_result_data, %struct.pwl_result_data* %36, i32 0, i32 3
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @REG_SET(i32 %32, i32 0, i32 %33, i32 %38)
  %40 = load i32, i32* @CM_RGAM_LUT_DATA, align 4
  %41 = load i32, i32* @CM_RGAM_LUT_DATA, align 4
  %42 = load %struct.pwl_result_data*, %struct.pwl_result_data** %5, align 8
  %43 = load i64, i64* %7, align 8
  %44 = getelementptr inbounds %struct.pwl_result_data, %struct.pwl_result_data* %42, i64 %43
  %45 = getelementptr inbounds %struct.pwl_result_data, %struct.pwl_result_data* %44, i32 0, i32 2
  %46 = load i32, i32* %45, align 4
  %47 = call i32 @REG_SET(i32 %40, i32 0, i32 %41, i32 %46)
  %48 = load i32, i32* @CM_RGAM_LUT_DATA, align 4
  %49 = load i32, i32* @CM_RGAM_LUT_DATA, align 4
  %50 = load %struct.pwl_result_data*, %struct.pwl_result_data** %5, align 8
  %51 = load i64, i64* %7, align 8
  %52 = getelementptr inbounds %struct.pwl_result_data, %struct.pwl_result_data* %50, i64 %51
  %53 = getelementptr inbounds %struct.pwl_result_data, %struct.pwl_result_data* %52, i32 0, i32 1
  %54 = load i32, i32* %53, align 4
  %55 = call i32 @REG_SET(i32 %48, i32 0, i32 %49, i32 %54)
  %56 = load i32, i32* @CM_RGAM_LUT_DATA, align 4
  %57 = load i32, i32* @CM_RGAM_LUT_DATA, align 4
  %58 = load %struct.pwl_result_data*, %struct.pwl_result_data** %5, align 8
  %59 = load i64, i64* %7, align 8
  %60 = getelementptr inbounds %struct.pwl_result_data, %struct.pwl_result_data* %58, i64 %59
  %61 = getelementptr inbounds %struct.pwl_result_data, %struct.pwl_result_data* %60, i32 0, i32 0
  %62 = load i32, i32* %61, align 4
  %63 = call i32 @REG_SET(i32 %56, i32 0, i32 %57, i32 %62)
  br label %64

64:                                               ; preds = %15
  %65 = load i64, i64* %7, align 8
  %66 = add i64 %65, 1
  store i64 %66, i64* %7, align 8
  br label %11

67:                                               ; preds = %11
  ret void
}

declare dso_local %struct.dcn10_dpp* @TO_DCN10_DPP(%struct.dpp*) #1

declare dso_local i32 @REG_SET(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
